--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
             <div class="card">
                 <h2 id="auth-title" class="text-2xl font-bold text-center text-white mb-6">Login to Zappy</h2>
                 <form id="auth-form">
+                    <div class="mb-4 hidden" id="username-field-container">
+                        <label for="username" class="block mb-2 text-sm font-medium text-slate-400">Username</label>
+                        <input type="text" id="username" class="form-input">
+                    </div>
                     <div class="mb-4">
-                        <label for="email" class="block mb-2 text-sm font-medium text-slate-400">Username (Email)</label>
+                        <label for="email" class="block mb-2 text-sm font-medium text-slate-400">Email</label>
                         <input type="email" id="email" class="form-input" required>
                     </div>
                     <div class="mb-6">
@@ -2406,3 +2410,4 @@
     </script>
 </body>
 </html>
+
