--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <div class="card">
                 <h2 id="auth-title" class="text-2xl font-bold text-center text-white mb-6">Login to Zappy</h2>
                 <form id="auth-form">
+                     <!-- Added username field for registration -->
                     <div class="mb-4 hidden" id="username-field-container">
                         <label for="username" class="block mb-2 text-sm font-medium text-slate-400">Username</label>
                         <input type="text" id="username" class="form-input">
@@ -138,6 +139,7 @@
                 </p>
             </div>
         </div>
+
 
         <!-- Main Dashboard Section (Post-Login) -->
         <div id="dashboard-section" class="hidden">
@@ -2410,4 +2412,5 @@
     </script>
 </body>
 </html>
+
 
