--- a/beta.html
+++ b/beta.html
@@ -334,7 +334,7 @@
                                 <button id="punish-search-btn" class="btn btn-secondary">Search</button>
                             </div>
                             <div id="punish-results" class="space-y-3">
-                                <p class="text-slate-400 text-sm">Enter a username and click Search.</p>
+                                <p class="text-slate-400 text-sm">Enter a username and click Search. ( Case Sensitive)</p>
                             </div>
                             <p id="punish-search-msg" class="text-sm mt-2 text-center"></p>
                         </div>
