--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 <div id="panel-tab-buttons" class="flex flex-wrap items-center gap-2 border-b border-slate-700 pb-2">
                     <button class="tab-button btn btn-secondary active" data-tab="main">Server Info</button>
                     <button class="tab-button btn btn-secondary" data-tab="players">Players</button>
+                    <button class="tab-button btn btn-secondary" data-tab="punishments">Punishments</button>
                     <button class="tab-button btn btn-secondary" data-tab="vehicles">Vehicles</button>
                     <button class="tab-button btn btn-secondary" data-tab="killlogs">Kill Logs</button>
                     <button class="tab-button btn btn-secondary" data-tab="commands">Execute</button>
@@ -297,7 +298,49 @@
                     </div>
                 </div>
 
-                <!-- Owner Admin Tab -->
+                
+                <!-- Punishments Tab -->
+                <div id="tab-punishments" class="tab-content hidden">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        <!-- Create Punishment -->
+                        <div class="card">
+                            <h3 class="text-xl font-semibold text-white mb-4">Create Punishment</h3>
+                            <div class="space-y-3">
+                                <label class="block">Roblox Username</label>
+                                <input id="punish-username" type="text" class="form-input" placeholder="e.g. SomePlayer" />
+                                <label class="block mt-2">Type</label>
+                                <select id="punish-type" class="form-input">
+                                    <option>ban</option>
+                                    <option>kick</option>
+                                    <option>temp ban</option>
+                                    <option>warn</option>
+                                    <option>verbal warning</option>
+                                </select>
+                                <div id="temp-duration-wrap" class="hidden">
+                                    <label class="block mt-2">Temp Ban Duration (hours)</label>
+                                    <input id="punish-duration" type="number" min="1" class="form-input" placeholder="e.g. 24" />
+                                </div>
+                                <label class="block mt-2">Reason</label>
+                                <textarea id="punish-reason" rows="3" class="form-input" placeholder="Reason..."></textarea>
+                                <button id="punish-create-btn" class="btn btn-primary mt-2">Add Punishment</button>
+                                <p id="punish-create-msg" class="text-sm mt-2 text-center"></p>
+                            </div>
+                        </div>
+                        <!-- Search & Results -->
+                        <div class="card">
+                            <h3 class="text-xl font-semibold text-white mb-4">Search Punishments</h3>
+                            <div class="flex gap-2 mb-3">
+                                <input id="punish-search-username" type="text" class="form-input" placeholder="Roblox username to search" />
+                                <button id="punish-search-btn" class="btn btn-secondary">Search</button>
+                            </div>
+                            <div id="punish-results" class="space-y-3">
+                                <p class="text-slate-400 text-sm">Enter a username and click Search. ( Case Sensitive)</p>
+                            </div>
+                            <p id="punish-search-msg" class="text-sm mt-2 text-center"></p>
+                        </div>
+                    </div>
+                </div>
+<!-- Owner Admin Tab -->
                 <div id="tab-owner" class="tab-content hidden">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                         <div class="card">
@@ -2416,10 +2459,199 @@
         window.onload = () => {
             ZappyApp.init();
         };
-    </script>
+    
+// --- Punishments Module (non-destructive; does not modify ZappyApp functions) ---
+const ZappyAppPunishments = (() => {
+    const els = {};
+    function colPath() {
+        const s = ZappyApp?.state?.currentServer;
+        if (!s) return null;
+        return `/artifacts/${appId}/public/data/servers/${s.id}/punishments`;
+    }
+    function ownerCanModerate() {
+        const s = ZappyApp?.state?.currentServer;
+        const u = ZappyApp?.state?.currentUser;
+        return !!(s && u && s.ownerId === u.uid);
+    }
+    function showMsg(id, msg, error=false) {
+        const el = document.getElementById(id);
+        if (!el) return;
+        el.textContent = msg;
+        el.className = error ? 'text-red-400 text-sm mt-2 text-center' : 'text-green-400 text-sm mt-2 text-center';
+        setTimeout(()=>{ if(el){ el.textContent=''; el.className=''; } }, 4000);
+    }
+    async function addPunishment() {
+        const username = els.username.value.trim();
+        const type = els.type.value;
+        const reason = els.reason.value.trim();
+        const durationHours = els.duration.value ? parseInt(els.duration.value,10) : null;
+        if (!username || !type || !reason) {
+            showMsg('punish-create-msg','Fill in username, type, and reason.', true);
+            return;
+        }
+        if (type === 'temp ban' && (!durationHours || durationHours <= 0)) {
+            showMsg('punish-create-msg','Enter a valid duration (hours) for a temp ban.', true);
+            return;
+        }
+        const path = colPath();
+        if (!path) { showMsg('punish-create-msg','Open a server first.', true); return; }
+        try {
+            const payload = {
+                robloxUsername: username,
+                type,
+                reason,
+                durationHours: type === 'temp ban' ? durationHours : null,
+                createdBy: ZappyApp?.state?.currentUser?.uid || 'unknown',
+                createdAt: serverTimestamp(),
+                updatedAt: serverTimestamp()
+            };
+            await addDoc(collection(db, path), payload);
+            els.username.value=''; els.reason.value=''; els.duration.value='';
+            els.type.value='ban'; document.getElementById('temp-duration-wrap').classList.add('hidden');
+            showMsg('punish-create-msg','Punishment added.');
+        } catch (e) {
+            console.error(e);
+            showMsg('punish-create-msg', 'Failed to add: ' + e.message, true);
+        }
+    }
+    function renderResults(docs) {
+        const wrap = els.results;
+        wrap.innerHTML = '';
+        if (!docs.length) {
+            wrap.innerHTML = '<p class="text-slate-400 text-sm">No results.</p>';
+            return;
+        }
+        docs.forEach(d => {
+            const data = d.data();
+            const id = d.id;
+            const createdAt = data.createdAt?.toDate ? data.createdAt.toDate().toLocaleString() : '';
+            const isOwner = ownerCanModerate();
+            const item = document.createElement('div');
+            item.className = 'p-3 rounded-md bg-slate-900';
+            item.innerHTML = `
+                <div class="flex flex-col gap-2">
+                    <div class="flex flex-wrap items-center justify-between gap-2">
+                        <div class="font-semibold text-white">@${data.robloxUsername}</div>
+                        <div class="text-sm text-slate-400">${createdAt}</div>
+                    </div>
+                    <div class="text-slate-200"><span class="font-bold">${data.type}</span> — ${data.reason}${data.durationHours ? ` (${data.durationHours}h)` : ''}</div>
+                    <div class="flex gap-2 ${isOwner ? '' : 'hidden'}">
+                        <button class="btn btn-secondary btn-sm" data-edit="${id}">Edit</button>
+                        <button class="btn btn-danger btn-sm" data-delete="${id}">Delete</button>
+                    </div>
+                    <div class="hidden mt-3" id="edit-wrap-${id}">
+                        <div class="grid grid-cols-1 md:grid-cols-4 gap-2">
+                            <input class="form-input md:col-span-1" id="edit-type-${id}" value="${data.type}"/>
+                            <input class="form-input md:col-span-1" id="edit-duration-${id}" type="number" min="1" placeholder="hours" value="${data.durationHours ?? ''}"/>
+                            <input class="form-input md:col-span-2" id="edit-reason-${id}" value="${data.reason}"/>
+                        </div>
+                        <div class="flex gap-2 mt-2">
+                            <button class="btn btn-primary btn-sm" data-save="${id}">Save</button>
+                            <button class="btn btn-secondary btn-sm" data-cancel="${id}">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            `;
+            wrap.appendChild(item);
+        });
+        wrap.querySelectorAll('[data-edit]').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const id = btn.getAttribute('data-edit');
+                document.getElementById('edit-wrap-'+id).classList.remove('hidden');
+            });
+        });
+        wrap.querySelectorAll('[data-cancel]').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const id = btn.getAttribute('data-cancel');
+                document.getElementById('edit-wrap-'+id).classList.add('hidden');
+            });
+        });
+        wrap.querySelectorAll('[data-save]').forEach(btn => {
+            btn.addEventListener('click', async () => {
+                const id = btn.getAttribute('data-save');
+                if (!ownerCanModerate()) return;
+                const path = colPath();
+                try {
+                    const newType = document.getElementById('edit-type-'+id).value.trim();
+                    const newReason = document.getElementById('edit-reason-'+id).value.trim();
+                    const newDuration = parseInt(document.getElementById('edit-duration-'+id).value,10) || null;
+                    await updateDoc(doc(db, path, id), {
+                        type: newType,
+                        reason: newReason,
+                        durationHours: newType === 'temp ban' ? newDuration : null,
+                        updatedAt: serverTimestamp()
+                    });
+                    showMsg('punish-search-msg','Updated.');
+                    // re-run the search to reflect changes
+                    search();
+                } catch (e) {
+                    console.error(e);
+                    showMsg('punish-search-msg','Failed to update: ' + e.message, true);
+                }
+            });
+        });
+        wrap.querySelectorAll('[data-delete]').forEach(btn => {
+            btn.addEventListener('click', async () => {
+                const id = btn.getAttribute('data-delete');
+                if (!ownerCanModerate()) return;
+                const confirmed = confirm('Delete this punishment?');
+                if (!confirmed) return;
+                const path = colPath();
+                try {
+                    await deleteDoc(doc(db, path, id));
+                    showMsg('punish-search-msg','Deleted.');
+                    search();
+                } catch (e) {
+                    console.error(e);
+                    showMsg('punish-search-msg','Failed to delete: ' + e.message, true);
+                }
+            });
+        });
+    }
+    async function search() {
+        const username = els.searchUsername.value.trim();
+        const path = colPath();
+        if (!path) { showMsg('punish-search-msg','Open a server first.', true); return; }
+        if (!username) { showMsg('punish-search-msg','Enter a username to search.', true); return; }
+        try {
+            const qRef = query(collection(db, path), where('robloxUsername', '==', username));
+            const snap = await getDocs(qRef);
+            renderResults(snap.docs);
+        } catch (e) {
+            console.error(e);
+            showMsg('punish-search-msg','Search failed: ' + e.message, true);
+        }
+    }
+    function bind() {
+        els.username = document.getElementById('punish-username');
+        els.type = document.getElementById('punish-type');
+        els.reason = document.getElementById('punish-reason');
+        els.duration = document.getElementById('punish-duration');
+        els.tempWrap = document.getElementById('temp-duration-wrap');
+        els.createBtn = document.getElementById('punish-create-btn');
+        els.createMsg = document.getElementById('punish-create-msg');
+        els.searchUsername = document.getElementById('punish-search-username');
+        els.searchBtn = document.getElementById('punish-search-btn');
+        els.results = document.getElementById('punish-results');
+        if (els.type) {
+            els.type.addEventListener('change', () => {
+                if (els.type.value === 'temp ban') els.tempWrap.classList.remove('hidden');
+                else els.tempWrap.classList.add('hidden');
+            });
+        }
+        if (els.createBtn) els.createBtn.addEventListener('click', addPunishment);
+        if (els.searchBtn) els.searchBtn.addEventListener('click', search);
+    }
+    return { init: bind };
+})();
+
+window.addEventListener('load', () => {
+    // Initialize punishments after the app is ready
+    ZappyAppPunishments.init();
+});
+</script>
 </body>
 </html>
-
 
 
 
