--- a/beta.html
+++ b/beta.html
@@ -5,7 +5,316 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zappy | Dashboard</title>
     <!-- Tailwind CSS for modern styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com">
+
+
+
+
+    clearTimeout(debounceTimer);
+    debounceTimer = setTimeout(async () => {
+      try {
+        const res = await fetch(`https://users.roblox.com/v1/users/search?keyword=${encodeURIComponent(query)}&limit=10`);
+        const data = await res.json();
+        punishDatalist.innerHTML = '';
+
+        if (data.data && data.data.length > 0) {
+          data.data.forEach(user => {
+            punishDatalist.insertAdjacentHTML('beforeend', `<option value="${user.name}"></option>`);
+          });
+        }
+      } catch (err) {
+        console.error("Roblox API autocomplete error:", err);
+      }
+    }, 300); // debounce input
+  });
+
+  // --- Tab completion ---
+  punishInput.addEventListener('keydown', function(e) {
+    if (e.key === "Tab") {
+      const options = [...punishDatalist.options];
+      const match = options.find(opt => opt.value.toLowerCase().startsWith(this.value.toLowerCase()));
+      if (match) {
+        e.preventDefault();
+        this.value = match.value;
+      }
+    }
+  });
+}
+
+
+// --- Roblox Username Autocomplete with Avatars ---
+const punishInput = document.getElementById('punish-username');
+const suggestionBox = document.getElementById('username-suggestions');
+
+if (punishInput && suggestionBox) {
+  let debounceTimer;
+  let suggestions = [];
+
+  punishInput.addEventListener('input', () => {
+    const query = punishInput.value.trim();
+    if (!query || query.length < 2) {
+      suggestionBox.innerHTML = '';
+      suggestionBox.classList.add('hidden');
+      return;
+    }
+
+    clearTimeout(debounceTimer);
+    debounceTimer = setTimeout(async () => {
+      try {
+        const res = await fetch(`https://users.roblox.com/v1/users/search?keyword=${encodeURIComponent(query)}&limit=5`);
+        const data = await res.json();
+        suggestions = data.data || [];
+        suggestionBox.innerHTML = '';
+
+        if (suggestions.length === 0) {
+          suggestionBox.classList.add('hidden');
+          return;
+        }
+
+        // Fetch avatars in bulk
+        const ids = suggestions.map(u => u.id).join(',');
+        const avatarRes = await fetch(`https://thumbnails.roblox.com/v1/users/avatar-headshot?userIds=${ids}&size=48x48&format=Png&isCircular=true`);
+        const avatarData = await avatarRes.json();
+        const avatarMap = {};
+        if (avatarData.data) {
+          avatarData.data.forEach(item => { avatarMap[item.targetId] = item.imageUrl; });
+        }
+
+        suggestions.forEach(user => {
+          const avatar = avatarMap[user.id] || '';
+          suggestionBox.insertAdjacentHTML('beforeend', `
+            <div class="suggestion-item" data-username="${user.name}">
+              <img src="${avatar}" class="suggestion-avatar" alt="">
+              <span>${user.name}</span>
+            </div>
+          `);
+        });
+
+        suggestionBox.classList.remove('hidden');
+
+      } catch (err) {
+        console.error("Roblox API autocomplete error:", err);
+      }
+    }, 300);
+  });
+
+  // Click to select
+  suggestionBox.addEventListener('click', (e) => {
+    const item = e.target.closest('.suggestion-item');
+    if (item) {
+      punishInput.value = item.dataset.username;
+      suggestionBox.innerHTML = '';
+      suggestionBox.classList.add('hidden');
+    }
+  });
+
+  // Tab / Enter autocomplete
+  punishInput.addEventListener('keydown', (e) => {
+    if ((e.key === "Tab" || e.key === "Enter") && suggestions.length > 0) {
+      e.preventDefault();
+      punishInput.value = suggestions[0].name;
+      suggestionBox.innerHTML = '';
+      suggestionBox.classList.add('hidden');
+    }
+  });
+}
+
+
+// === Robust Roblox Username Autocomplete (with Avatars + Dropdown) ===
+(function() {
+  const DROPDOWN_ID = 'username-suggestions';
+  let inputEl = null;
+  let boxEl = null;
+  let debouncer = null;
+  let suggestions = [];
+  let activeIndex = -1;
+
+  function ensureBox() {
+    boxEl = document.getElementById(DROPDOWN_ID);
+    if (!boxEl) {
+      boxEl = document.createElement('div');
+      boxEl.id = DROPDOWN_ID;
+      boxEl.className = 'hidden';
+      document.body.appendChild(boxEl);
+    }
+    return boxEl;
+  }
+
+  function positionBox() {
+    if (!inputEl || !boxEl) return;
+    const rect = inputEl.getBoundingClientRect();
+    boxEl.style.left = `${window.scrollX + rect.left}px`;
+    boxEl.style.top = `${window.scrollY + rect.bottom + 4}px`;
+    boxEl.style.width = `${rect.width}px`;
+  }
+
+  async function fetchSuggestions(query) {
+    try {
+      const res = await fetch(`https://users.roblox.com/v1/users/search?keyword=${encodeURIComponent(query)}&limit=8`);
+      const data = await res.json();
+      const list = Array.isArray(data?.data) ? data.data : [];
+      const ids = list.map(u => u.id).join(',');
+      let avatarMap = {};
+      if (ids.length) {
+        const a = await fetch(`https://thumbnails.roblox.com/v1/users/avatar-headshot?userIds=${ids}&size=48x48&format=Png&isCircular=true`);
+        const ajson = await a.json();
+        (ajson?.data || []).forEach(it => {
+          avatarMap[it.targetId] = it.imageUrl;
+        });
+      }
+      return list.map(u => ({ id: u.id, name: u.name, avatar: avatarMap[u.id] || '' }));
+    } catch (e) {
+      console.error('Roblox API autocomplete error:', e);
+      return [];
+    }
+  }
+
+  function render() {
+    if (!boxEl) return;
+    boxEl.innerHTML = '';
+    if (!suggestions.length) {
+      boxEl.classList.add('hidden');
+      return;
+    }
+    const frag = document.createDocumentFragment();
+    suggestions.forEach((u, idx) => {
+      const item = document.createElement('div');
+      item.className = 'suggestion-item' + (idx === activeIndex ? ' active' : '');
+      item.dataset.username = u.name;
+      item.dataset.index = String(idx);
+
+      const img = document.createElement('img');
+      img.className = 'suggestion-avatar';
+      img.alt = '';
+      img.src = u.avatar || '';
+
+      const span = document.createElement('span');
+      span.textContent = u.name;
+
+      item.appendChild(img);
+      item.appendChild(span);
+      frag.appendChild(item);
+    });
+    boxEl.appendChild(frag);
+    boxEl.classList.remove('hidden');
+    positionBox();
+  }
+
+  function select(index) {
+    if (!inputEl || index < 0 || index >= suggestions.length) return;
+    inputEl.value = suggestions[index].name;
+    hideBox();
+  }
+
+  function hideBox() {
+    if (boxEl) {
+      boxEl.classList.add('hidden');
+      boxEl.innerHTML = '';
+    }
+    activeIndex = -1;
+  }
+
+  function onInput(e) {
+    const q = inputEl.value.trim();
+    if (q.length < 2) {
+      suggestions = [];
+      render();
+      return;
+    }
+    clearTimeout(debouncer);
+    debouncer = setTimeout(async () => {
+      suggestions = await fetchSuggestions(q);
+      activeIndex = suggestions.length ? 0 : -1; // auto-focus first
+      render();
+    }, 250);
+  }
+
+  function onKeyDown(e) {
+    if (e.key === 'ArrowDown') {
+      if (!suggestions.length) return;
+      e.preventDefault();
+      activeIndex = (activeIndex + 1) % suggestions.length;
+      render();
+      return;
+    }
+    if (e.key === 'ArrowUp') {
+      if (!suggestions.length) return;
+      e.preventDefault();
+      activeIndex = (activeIndex - 1 + suggestions.length) % suggestions.length;
+      render();
+      return;
+    }
+    if (e.key === 'Enter') {
+      if (suggestions.length && activeIndex >= 0) {
+        e.preventDefault();
+        select(activeIndex);
+      }
+      return;
+    }
+    if (e.key === 'Tab') {
+      if (suggestions.length) {
+        e.preventDefault();
+        select(Math.max(activeIndex, 0));
+      }
+      return;
+    }
+    if (e.key === 'Escape') {
+      hideBox();
+      return;
+    }
+  }
+
+  function onClick(e) {
+    const item = e.target.closest('.suggestion-item');
+    if (item && boxEl && boxEl.contains(item)) {
+      const idx = Number(item.dataset.index || -1);
+      if (idx >= 0) select(idx);
+    } else {
+      // Clicked outside the dropdown; if not the input, hide
+      if (e.target !== inputEl) hideBox();
+    }
+  }
+
+  function attach(el) {
+    if (!el || el === inputEl) return;
+    // Clean up previous
+    if (inputEl) {
+      inputEl.removeEventListener('input', onInput);
+      inputEl.removeEventListener('keydown', onKeyDown);
+    }
+    inputEl = el;
+    ensureBox();
+    positionBox();
+    inputEl.addEventListener('input', onInput);
+    inputEl.addEventListener('keydown', onKeyDown);
+    window.addEventListener('resize', positionBox);
+    window.addEventListener('scroll', positionBox, true);
+    document.addEventListener('click', onClick);
+    // In case input gains focus later (e.g., tab switch)
+    inputEl.addEventListener('focus', positionBox);
+  }
+
+  function tryAttach() {
+    const el = document.getElementById('punish-username');
+    if (el) attach(el);
+  }
+
+  // Run after DOM ready and also watch for dynamic tab loads
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', tryAttach);
+  } else {
+    tryAttach();
+  }
+
+  // MutationObserver to catch when tab DOM is inserted later
+  const mo = new MutationObserver(() => {
+    if (!inputEl) tryAttach();
+  });
+  mo.observe(document.documentElement, { childList: true, subtree: true });
+
+})();
+
+</script>
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,7 +409,53 @@
             justify-content: center;
             z-index: 50;
         }
-    </style>
+    
+.suggestion-item {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+.suggestion-item:hover {
+  background-color: #475569;
+}
+.suggestion-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+
+/* --- Global Roblox username dropdown --- */
+#username-suggestions {
+  position: absolute;
+  z-index: 99999;
+  background-color: #0f172a; /* slate-900 */
+  border: 1px solid #334155; /* slate-700 */
+  border-radius: 0.5rem;
+  max-height: 16rem; /* 256px */
+  overflow-y: auto;
+  box-shadow: 0 10px 20px rgba(0,0,0,.35);
+}
+.suggestion-item {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0.75rem;
+  cursor: pointer;
+}
+.suggestion-item:hover, .suggestion-item.active {
+  background-color: #1f2937; /* gray-800 */
+}
+.suggestion-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+.hidden { display: none !important; }
+
+</style>
 </head>
 <body class="min-h-screen">
 
@@ -307,7 +662,7 @@
                             <h3 class="text-xl font-semibold text-white mb-4">Create Punishment</h3>
                             <div class="space-y-3">
                                 <label class="block">Roblox Username</label>
-                                <input id="punish-username" type="text" class="form-input" placeholder="e.g. SomePlayer" />
+                                <input id="punish-username" type="text" class="form-input" placeholder="e.g. SomePlayer" autocomplete="off" />
                                 <label class="block mt-2">Type</label>
                                 <select id="punish-type" class="form-input">
                                     <option>ban</option>
@@ -2652,8 +3007,6 @@ window.addEventListener('load', () => {
 </script>
 </body>
 </html>
-
-
 
 
 
